# Infinity_Creator_Tool

./: .gitignore  README.md  creatorpack.spec  pyproject.toml
client/: index.html  package-lock.json  package.json
client/src/: App.tsx  styles.css
client/src/lib/: store.ts  types.ts  youtube.ts
client/src/pages/: Dashboard.tsx  JobDetail.tsx  NewJob.tsx  Settings.tsx
creatorpack/: __init__.py  packaging.spec
creatorpack/app_cli/: __init__.py  bundle.py  main.py
creatorpack/app_cli/branding/: __init__.py  caption_styles.ssa  theme.py
creatorpack/app_cli/ingest/: __init__.py  archive.py  commons.py  downloader.py  europeana.py  license_gate.py  local.py  nasa.py  pexels.py  sources.py
creatorpack/app_cli/media/: __init__.py  chunking.py  ffmpeg_ops.py  thumbnails.py
creatorpack/app_cli/nlp/: __init__.py  chapters.py  highlights.py  summarize.py
creatorpack/app_cli/outputs/: __init__.py  credits.py  packaging.py
creatorpack/app_cli/schemas/: assets_map_schema.json  chapters_schema.json  transcript_schema.json  validate.py
creatorpack/app_cli/stt/: diarize.py  transcribe.py
creatorpack/app_cli/util/: errors.py  io.py  job.py  logging.py  preflight.py  timecode.py
creatorpack/tests/: test_bundle.py  test_chunking.py  test_license_gate.py  test_transcribe_small.py
creatorpack/ui_tauri/: package.json
creatorpack/ui_tauri/src/: index.html  main.ts
creatorpack/ui_tauri/src-tauri/: Cargo.toml  tauri.conf.json
creatorpack/ui_tauri/src-tauri/src/: main.rs
examples/: brand_default.yaml
server/: index.ts  package.json  processor.ts  routes.ts  storage.ts
tests/: test_chunking.py  test_export_structure.py  test_license_gate.py  test_pipeline_integration.py  test_preflight.py  test_schema_validation.py  test_transcribe_small.py
ui_tauri/: index.html  package.json  tsconfig.json
ui_tauri/src/: main.ts
ui_tauri/src-tauri/: Cargo.toml  tauri.conf.json
ui_tauri/src-tauri/src/: main.rs
