[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creatorpack"
version = "0.1.0"
description = "Local-first content creation toolkit"
authors = [{name = "CreatorPack Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
creatorpack = "creatorpack.app_cli.main:cli"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
pythonpath = ["."]
