[package]
name = "creatorpack-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = ["dialog", "shell", "fs-read-file"] }
anyhow = "1"


[build-dependencies]
tauri-build = { version = "1" }
