[package]
name = "creatorpack-ui"
version = "0.1.0"
edition = "2021"

description = "CreatorPack desktop shell"
license = "MIT"

[dependencies]
tauri = { version = "1", features = ["shell-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[build-dependencies]
tauri-build = "1"
